test/acceptance/parsing/failing/include-a-file-without-get-then-quit.js
'use strict';

module.exports = require('spun-util').errors.validating.ValidationError;
